--- a/site/themes/spuit/assets/stylesheets/styles.scss
+++ b/site/themes/spuit/assets/stylesheets/styles.scss
@@ -193,6 +193,10 @@ $width-sidebar: 14rem;
   position: sticky;
   top: 0;
   padding: 2rem;
+  
+  ul {
+    @include group-vertical;
+  }
 }
 
 .content {
