--- a/site/themes/spuit/static/stylesheets/styles.css
+++ b/site/themes/spuit/static/stylesheets/styles.css
@@ -8780,6 +8780,20 @@ a {
   position: sticky;
   top: 0;
   padding: 2rem; }
+  .sidebar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline-block;
+    display: flex;
+    flex-wrap: wrap; }
+    .sidebar ul > li {
+      display: inline-block; }
+    .sidebar ul > * {
+      flex-basis: 100%;
+      flex-grow: 1; }
+      .sidebar ul > * + * {
+        margin-top: 0.5rem; }
 
 .content {
   white-space: normal;
