--- a/site/themes/spuit/assets/stylesheets/styles.scss
+++ b/site/themes/spuit/assets/stylesheets/styles.scss
@@ -15,7 +15,7 @@
 
 @include include-normalize;
 // @include include-animations;
-// @include include-spacers;
+@include include-spacers;
 
 // basic styles
 
