--- a/site/themes/spuit/layouts/_default/baseof.html
+++ b/site/themes/spuit/layouts/_default/baseof.html
@@ -2,16 +2,18 @@
 
 {{ partial "header" . }}
 
+<div class="fader" data-onof="open-drawer" data-onof-target="body"></div>
+
 <div class="l-2col" id="hamburger">
   <aside>
     {{ partial "sidebar" . }}
   </aside>
 
   <main>
-    <button class="hamburger" data-onof="open" data-onof-target="#hamburger">
+    <button class="hamburger" data-onof="open-drawer" data-onof-target="body">
       <i class="icon-hamburger"></i>
     </button>
-
+    
     {{ if eq .IsHome false }}
     {{/* partial "parts/breadcrumbs" . */}}
     {{ end }}
