--- a/site/themes/spuit/layouts/404.html
+++ b/site/themes/spuit/layouts/404.html
@@ -3,7 +3,7 @@
 <div class="entry is-404">
   <h1>404</h1>
 
-  <a href="{{ "/" | relURL }}">トップページ</a>
+  <a href="{{ "/" | relURL }}">トップページへ</a>
 </div>
 
 {{ end }}
